# usslot_bot

./: Cargo.toml
config/: testing.toml
src/: lib.rs  main.rs
src/config/: cli.rs  config.rs
src/database/: connection.rs  mod.rs
src/errors/: bot_error.rs  mod.rs
src/gambling/: dice.rs  mod.rs
src/repository/: mod.rs  user.rs
src/services/: balance.rs  dice.rs  mod.rs
src/telegram/: bot.rs  command.rs  mod.rs  update_handler.rs
src/telergam/: bot.rs  mod.rs  types.rs  update_handler.rs
