[package]
name = "usslot_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.14"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
mongodb = "2.7"
serde_yaml = "0.9"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
